@@ -674,6 +674,8 @@ $2',
 'prevn'                 => '前$1',
 'nextn'                 => '次$1',
 'viewprevnext'          => '見（$1）（$2）（$3）',
+'search-result-size'    => "$1 （$2字）",
+'search-result-score'   => "關：$1%",
 'showingresults'        => '見<b>$1</b>尋，自<b>$2</b>始：',
 'showingresultsnum'     => '見<b>$3</b>尋，自<b>$2</b>始：',
 'powersearch'           => '尋',
@@ -1177,8 +1179,8 @@ $NEWPAGE
 'protectedarticle'            => '緘焉"[[$1]]"',
 'modifiedarticleprotection'   => '令"$1"',
 'unprotectedarticle'          => '啟焉"[[$1]]"',
-'protect-title'               => '緘"$1"…',
-'confirmprotect'              => '准緘',
+'protect-title'               => '更"$1"之緘',
+'protect-legend'              => '准緘',
 'protectcomment'              => '贊曰',
 'protectexpiry'               => '屆期',
 'protect_expiry_invalid'      => '屆期不明。',
